--- a/githublist/public/index.html
+++ b/githublist/public/index.html
@@ -25,6 +25,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+
     <script id="react-dotenv" src="./env.js"></script>
   </head>
   <body>
