--- a/githublist/public/index.html
+++ b/githublist/public/index.html
@@ -27,7 +27,10 @@
     <title>React App</title>
     <script src="https://cdn.tailwindcss.com"></script>
 
-    <script id="react-dotenv" src="./env.js"></script>
+    <script
+      id="react-dotenv"
+      src="http://srl132.github.io/github_repositories_search/env.js"
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
